--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,5 +1,6 @@
 
 
+
 .about_container{
     grid-template-columns: repeat(2,1fr);
     align-items: center;
@@ -54,9 +55,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.github:hover{
-   
-}
+
 
 @media screen and (max-width: 992px) {
     .about_container{
@@ -77,6 +76,7 @@
 
 .about_info{
     justify-content: center;
+ 
 
 }
 
@@ -91,10 +91,19 @@
   
   @media screen and (max-width: 576px) {
     .about_info{
-        grid-template-columns: repeat(3,1fr);
+        grid-template-columns: repeat(2,1fr);
+       
     }
     .about_description{
         padding: 0;
+    }
+  }
+  
+  /* For small devices */
+  @media screen and (max-width: 350px) {
+    .about_info{
+        grid-template-columns: repeat(3,1fr);
+        margin-left: 25px;
     }
   }
   
