--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,12 +1,18 @@
+li{
+   
+   
+        margin-bottom: 10px; 
+  
+}
 
 
-.about_container{
-    grid-template-columns: repeat(2,1fr);
+.about_container {
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     column-gap: 4rem;
 }
 
-.about_img{
+.about_img {
     width: 350px;
     /* height: 350px; */
     border-radius: 1.5rem;
@@ -14,95 +20,144 @@
     margin-bottom: 40px;
 }
 
-.about_info{
-    grid-template-columns: repeat(3,140px);
-    gap: 0.5rem;
+.about_info {
+    grid-template-columns: repeat(3, 140px);
+    gap: 1.5rem;
     margin-bottom: var(--mb-2);
 }
 
-.about_box{
-    background-color: var(--container-color);
-    border: 1px solid var(--title-color);
+.about_box {
+    background-color: var(--bg-color);
+    border: 2px solid var(--title-color);
     border-radius: 0.75rem;
     text-align: center;
     padding: 1rem 1.5rem;
+    width: fit-content;
 }
 
-.about_icon{
+.about_icon {
     font-size: 1.5rem;
     color: var(--title-color);
     margin-bottom: var(--mb-0-5);
 }
 
-.about_title{
- 
+.about_title {
+
     font-size: 1rem;
     font-weight: medium;
 }
 
-.about_subtitle{
+.about_subtitle {
     font-size: 0.5rem
 }
 
-.about_description{
+.about_description {
     padding: 0 4rem 0 0;
-    margin-bottom:30px;
+    margin-bottom: 30px;
 }
 
-.github{
+.github {
     width: 200px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.project_container{
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    height: 100%;
+    /* overflow-y: scroll; */
+    
+}
+.project{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+}
+.project_title{
+    position: absolute;
+    top:2%;
+    left: 40%;
+}
+
+.project_button {
+    justify-content: center;
+    width: auto;
+}
+
+.project_box {
+    margin:20px ;
+    width: 60%;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
 
 
 @media screen and (max-width: 992px) {
-    .about_container{
+    .about_container {
         grid-template-columns: 1fr;
         row-gap: 2.5rem;
     }
-.about_img{
-    width: 220px;
-    margin-bottom: 10px;
-    margin-top: -20px;
-}
-.about_box{
-    padding: 0.75rem 0.5rem;
-}
-.about_data{
-    text-align: center;
-}
 
-.about_info{
-    justify-content: center;
- 
-
-}
-
-.about_description{
-    padding: 0 5rem;
-    margin-bottom: 2rem;
-}
-
-  }
-  
-  /* For medium devices */
-  
-  @media screen and (max-width: 576px) {
-    .about_info{
-        grid-template-columns: repeat(2,1fr);
-       
+    .about_img {
+        width: 220px;
+        margin-bottom: 10px;
+        margin-top: -20px;
     }
-    .about_description{
+
+    .about_box {
+        padding: 0.75rem 0.5rem;
+    }
+
+    .about_data {
+        text-align: center;
+    }
+
+    .about_info {
+        justify-content: center;
+
+
+    }
+
+    .about_description {
+        padding: 0 5rem;
+        margin-bottom: 2rem;
+    }
+    .project_box {
+        margin:20px ;
+        width: 90%;
+    }
+
+}
+
+/* For medium devices */
+
+@media screen and (max-width: 576px) {
+    .about_info {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+
+    .about_description {
         padding: 0;
     }
-  }
-  
-  /* For small devices */
-  @media screen and (max-width: 350px) {
-    .about_info{
-        grid-template-columns: repeat(3,1fr);
+    .project_title{
+        font-size:2rem;
+        left: 35%;
+        top:1%;
+    }
+    .project_box {
+        margin:20px ;
+        width: 90%;
+    }
+}
+
+/* For small devices */
+@media screen and (max-width: 350px) {
+    .about_info {
+        grid-template-columns: repeat(3, 1fr);
         margin-left: 25px;
     }
-  }
-  
+}
