--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,44 +1,46 @@
-.home_content{
-    grid-template-columns: 116px repeat(2,1fr);
+.home_content {
+    grid-template-columns: 116px repeat(2, 1fr);
     padding-top: 2.5rem;
     column-gap: 2rem;
     align-items: center;
+    position: relative;
 }
 
-.home_social{
+.home_social {
     display: grid;
     grid-template-columns: max-content;
     row-gap: 1rem;
 }
 
-.home_social-icon{
+.home_social-icon {
     width: 40px;
     height: 40px;
     text-align: center;
     align-items: center;
     color: var(--title-color);
     border: 1px solid var(--title-color);
-    box-shadow: 0 0 20px 10px rgb(0, 0,0,0.2);
+    box-shadow: 0 0 20px 10px rgb(0, 0, 0, 0.2);
     border-radius: 50%;
     position: relative;
     overflow: hidden;
 }
 
-.home_social-icon, .uil{
+.home_social-icon,
+.uil {
     font-size: 1.25rem;
-    line-height: 40px;    
+    line-height: 40px;
     position: relative;
     z-index: 10;
     /* color:var(--title-color); */
-    
-   
+
+
 }
 
-.home_social a::after{
+.home_social a::after {
     content: '';
     width: 100%;
     height: 100%;
-    left:-50px;
+    left: -50px;
     bottom: 0;
     /* background: linear-gradient(-45deg,#587403,#988b04); */
     /* background: linear-gradient(-45deg,#ed1c94,#ffec17); */
@@ -48,50 +50,53 @@
 
 
 
-.home_social a:hover::after{
+.home_social a:hover::after {
     left: 0;
 }
-.home_social-icon:hover{
+
+.home_social-icon:hover {
     /* color: #c7c3c3; */
     color: #fff;
 }
 
-.home_social-icon:nth-child(1):hover  {
+.home_social-icon:nth-child(1):hover {
     background: #E1306C;
     border: none;
     box-shadow: 0 0 35px #E1306C;
-    text-shadow: 0 0 35px #E1306C,0 0 20px #d6249f, 0 0 30px #285AEB;
+    text-shadow: 0 0 35px #E1306C, 0 0 20px #d6249f, 0 0 30px #285AEB;
 }
 
-.home_social-icon:nth-child(2):hover  {
+.home_social-icon:nth-child(2):hover {
     background-color: #4267b2;
     border: none;
     box-shadow: 0 0 15px #4267b2;
     text-shadow: 0 0 15px #4267b2, 0 0 20px #1459b3, 0 0 30px #179bff;
     /* color: var(--bg-color); */
 }
-.home_social-icon:nth-child(3):hover  {
+
+.home_social-icon:nth-child(3):hover {
     background: #333;
     border: none;
     box-shadow: 0 0 15px #333;
     text-shadow: 0 0 15px #333;
 }
 
-.home_title{
+.home_title {
     font-size: 2.5rem;
     margin-bottom: var(--mb-0-25);
 }
 
-.home_subtitle{
+.home_subtitle {
     position: relative;
     font-size: 0.75;
     padding-left: 3.4rem;
-    font-weight:350;
+    font-weight: 350;
     margin-bottom: var(--mb-1);
 }
-.home_subtitle::before{
-   content: '';
-   position: absolute;
+
+.home_subtitle::before {
+    content: '';
+    position: absolute;
     width: 50px;
     height: 1px;
     background-color: var(--text-color);
@@ -99,124 +104,222 @@
     top: 1rem;
 }
 
-.home_description{
+.home_description {
     max-width: 400px;
     margin-bottom: var(--mb-3);
 }
 
-.home_img{
+.home_img {
     background: url(../../MY-INFOs/3.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    border-radius: 50%;
-    /* box-shadow: inset 0 0 0 9px rgb(255, 255, 255 / 30%); */
+    border: 2px solid var(--text-color);
     order: 1;
     justify-self: center;
-    width: 350px;
+    width: 250px;
     height: 350px;
-    /* animation: profile_animate 8s ease-in-out infinite 1s; */
+    z-index: 10;
 }
+
+.border_img {
+    position: absolute;
+    width: 250px;
+    height: 350px;
+    border: 5px solid var(--text-color);
+    right: 10%;
+    top: 15%;
+    z-index: 5;
+}
+
+.arrow1_img {
+    position: absolute;
+    filter: hue-rotate(180deg);
+    width: 60px;
+    transition: filter .4s;
+
+    right: 38%;
+    bottom: 90%;
+}
+
+.arrow2_img {
+    position: absolute;
+    filter: invert(1);
+    width: 80px;
+    transition: filter .4s;
+
+    left: 40%;
+    bottom: 10%;
+}
+
+.pick1_img {
+    position: absolute;
+    filter: invert(100%);
+    
+    width: 80px;
+    transition: filter .4s;
+
+    left: 15%;
+    top: 110%;
+}
+
 
 @keyframes profile_animate {
     0% {
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
+
     50% {
         border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
     }
+
     100% {
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
 }
 
-.home_scroll-name{
+.home_scroll-name {
     font-weight: 350;
     margin-right: 5px;
     margin-left: 250px;
     color: #000;
 }
 
-.home_scroll-arrow{
+.home_scroll-arrow {
     color: #000;
     font-size: 2.25rem;
     font-weight: 350;
 }
 
 @media screen and (max-width: 992px) {
-    
-    .home_content{
-        grid-template-columns: 100px repeat(2,1fr);
+
+    .home_content {
+        grid-template-columns: 100px repeat(2, 1fr);
         column-gap: 1.5rem;
     }
-    .home_hand{
+
+    .home_hand {
         width: 26px;
         height: 26px;
     }
-    
-    .home_subtitle{
+
+    .home_subtitle {
         padding-left: 3.75rem;
         margin-bottom: bar(--mb-1);
-        
+
     }
-    .home_subtitle::before{
+
+    .home_subtitle::before {
         width: 42px;
         top: 0.8rem;
 
     }
 
-    .home_img{
-        width: 250px;
-        height: 250px;
+    .home_img {
+        margin-right: 20px;
+        width: 200px;
+        height: 300px;
     }
-    
-    
-    
-    
+
+    .border_img {
+        width: 200px;
+        height: 300px;
+        left: 64%;
+        top: 7%;
+
+    }
+
+    .arrow1_img {
+        right: 5%;
+        top: 5%;
+        width: 30px;
+    }
+
+    .arrow2_img {
+        width: 80px;
+        left: 55%;
+        bottom: 10%;
+    }
+
+
+
+
 }
+
 @media screen and (max-width: 768px) {
-    .home_content{
+    .home_content {
         grid-template-columns: 0.5fr 3fr;
         padding-top: 3.5rem;
     }
-    .home_img{
+
+    .home_img {
         order: initial;
         justify-self: initial;
     }
 
-    .home_data{
+    .home_data {
         grid-column: 1/3;
     }
 
-    .home_img{
-        box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
-        width: 200px;
+    .home_img {
+        /* box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%); */
+        width: 150px;
         height: 200px;
+        margin-left: 40px;
+
     }
 
-    .home_scroll{
+    .border_img {
+        width: 150px;
+        height: 200px;
+        left: 36%;
+        top: 12.5%;
+
+    }
+
+    .arrow1_img {
+        right: 5%;
+        width: 30px;
+    }
+
+    .arrow2_img {
+        width: 60px;
+        left: 65%;
+        bottom: 40%;
+    }
+
+
+    .pick1_img {
+        filter: invert(100%);
+        top: 90%;
+        left: 70%;
+
+    }
+
+    .home_scroll {
         display: none;
     }
 
 }
+
 @media screen and (max-width: 350px) {
-    
-    .home_img{
-       width: 180px;
-       height: 180px;
+
+    .home_img {
+        width: 180px;
+        height: 180px;
     }
 
-    .home_data{
+    .home_data {
         grid-column: 1/3;
     }
 
-    .home_img{
+    .home_img {
         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
         width: 200px;
         height: 200px;
     }
 
-    .home_scroll{
+    .home_scroll {
         display: none;
     }
 
